Bug 1691719 - Don't explicitly activate supplemental fonts directory when building with pre-Catalina SDK, as the fonts are automatically made available. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D105042